# wstcpp_fast

./: CMakeLists.txt  README.md  test_wst.cpp
data/: model.txt
scripts/: train.py
src/: wst.cpp  wst.h
